leetcode题目使用线程池进行实现

--- a/threads/pom.xml
+++ b/threads/pom.xml
@@ -7,6 +7,17 @@
     <groupId>com.fuzekun</groupId>
     <artifactId>threads</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven-copiler-source>1.8</maven-copiler-source>
+        <maven-compiler-target>1.8</maven-compiler-target>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.12</version>
+        </dependency>
+    </dependencies>
 
 </project>
