--- a/deisinModel/pom.xml
+++ b/deisinModel/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.13</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.12</version>
+        </dependency>
     </dependencies>
 
     
