--- a/threads/pom.xml
+++ b/threads/pom.xml
@@ -18,6 +18,22 @@
             <artifactId>cglib</artifactId>
             <version>3.2.12</version>
         </dependency>
+        <!--里面含有data注解以及slf4j的东西-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 
 </project>
